Fixed input validation in EzUrl